# quotes

backend/: main.py  pyproject.toml  quotes.db
backend/alembic/versions/: 163c391d1552_add_authentication_and_update_user_model.py
backend/src/quotes/admin/: admin.py
backend/src/quotes/api/: quote_routes.py  routes.py  schemas.py  user_routes.py
backend/src/quotes/core/: database.py
backend/src/quotes/models/: database.py
backend/src/quotes/services/: quotes.py  users.py
frontend/: README.md
frontend/src/: App.tsx  index.css
frontend/src/api/: client.ts
frontend/src/components/: CreateQuoteForm.tsx  QuotesList.tsx
frontend/src/types/: index.ts
