[project]
name = "quotes"
version = "0.1.0"
description = "A simple API for managing quotes"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi[standard]>=0.119.0",
    "sqlalchemy>=2.0.0",
    "alembic>=1.13.0",
    "sqladmin>=0.18.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/quotes"]
